--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <h1>	This	is	my	first	page	with	GitHub	Pages	</h1>
 <p>Thanks	GitHub!</p>
   <br>
-  <h1><a href='https://djosie.github.io/MIT/and.html'>🎁</a></h1>
+  <h1><a href='https://djosie.github.io/MIT/and.html' style='text-decoration:none'>🎁</a></h1>
 </html>
